feat: producer's property module
