# src/modules/producer/producer.entity.ts
@@ -1,6 +1,7 @@
-import { Column, Entity, ManyToOne, JoinColumn } from 'typeorm';
+import { Column, Entity, ManyToOne, JoinColumn, OneToMany } from 'typeorm';
 import { BaseEntity } from 'src/core/baseEntity';
 import { UserEntity } from 'src/modules/user/user.entity';
+import { PropertyEntity } from 'src/modules/property/property.entity';
 
 @Entity('producers')
 export class ProducerEntity extends BaseEntity {
@@ -16,4 +17,7 @@ export class ProducerEntity extends BaseEntity {
 
   @Column('uuid', { name: 'user_id', nullable: false })
   userId: string;
+
+  @OneToMany(() => PropertyEntity, property => property.producer)
+  properties: PropertyEntity[];
 }
